# ProjectTemplate

./: CMakeLists.txt  README.md
.github/workflows/: action.yml
cmake/: DoxygenTargets.cmake  DoxygenTargets.doxyfile.in  ExternalModules.cmake  doxygen.conf
doc/: 01_QuickStart.md
doc/doxygen_theme/: DoxygenLayout.xml  customdoxygen.css  footer.html
src/: CMakeLists.txt  demo.cpp  demo.h  simple.cpp  simple.h
test/: CMakeLists.txt
test/unit/: CMakeLists.txt  demo_test.cpp  main.cpp  simple_test.cpp
